<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyLocalization</string>

    <string name="football">Indonesia National Team win against Thailand
        National Team</string>
    <string name="goal">Goal from Indonesia scored by %1$s and %2$s, so
        the final score is %3$d - %4$d for Indonesia victory</string>

    <plurals name="numberOfSongAvailable">
        <item quantity="one">%d song found</item>
        <item quantity="other">%d song found</item>
    </plurals>

    <string name="app_homeurl">
        Visit us at <xliff:g id="homepage">https://www.polines.ac.id
    </xliff:g>
    </string>

    <string name="change_language_settings">Change Language Settings</string>

    <string name="tab_text1">Home</string>
    <string name="tab_text2">Profile</string>
    <string name="profil">My Profile</string>

    <string name="profil_fragment">Hello blank fragment</string>
    <string name="namau">Name  : Alfi Dwi Novitasari</string>
    <string name="address">Address  : Sepi, Barepan, Cawas, Klaten</string>
    <string name="hobby">Hobby  : Reading, Swimming</string>
    <string name="quote">Quotes  : Moving, Process</string>
</resources>
