<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorAccent"
    android:id="@+id/cardview_item"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5px"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300px"
            android:text="@string/profil">
        </TextView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="400px"
            android:layout_height="400px"
            android:layout_marginTop="40px"
            android:layout_marginLeft="170px"
            android:src="@drawable/alfi"
            android:id="@+id/img_profil"/>

        <LinearLayout
            android:layout_width="600px"
            android:layout_height="300px"
            android:layout_marginLeft="55px"
            android:layout_marginTop="60px"
            android:layout_marginRight="100px"
            android:layout_marginBottom="0px"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3px"
                android:layout_marginLeft="5px"
                android:layout_marginRight="5px"
                android:text="@string/namau"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3px"
                android:layout_marginLeft="5px"
                android:layout_marginRight="5px"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hobi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3px"
                android:layout_marginLeft="5px"
                android:layout_marginRight="5px"
                android:text="@string/hobby"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3px"
                android:layout_marginLeft="5px"
                android:layout_marginRight="5px"
                android:text="@string/quote"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    </androidx.cardview.widget.CardView>